--- a/styles/style.css
+++ b/styles/style.css
@@ -9,13 +9,15 @@ html {
 }
 
 .page {
-  inline-size: 1200px;
-  block-size: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: auto;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  block-size: 100%;
 }
 
 h1,
@@ -48,4 +50,33 @@ ol {
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: #D9D9D9;
+}
+
+.content {
+  display: grid;
+  grid-template-areas: 
+    "result details";
+  align-items: end;
+  gap: 30px;
+  margin: 0 30px;
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+}
+
+.content__list-container {
+  overflow-y: scroll;
+  block-size: 298px;
+}
+
+.content__details {
+  grid-area: details;
+  
+}
+
+.result {
+  grid-area: result;
 }
