--- a/styles/style.css
+++ b/styles/style.css
@@ -80,3 +80,37 @@ ol {
 .result {
   grid-area: result;
 }
+
+.result__video-container {
+  padding-bottom: 16px;
+  width: 711px;
+  height: 386px;
+}
+
+.result__video {
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+}
+
+.content__list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.content__video-card {
+  display: flex;
+  align-items: start;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+  object-fit: cover;
+  object-position: start;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
+}
