--- a/styles/style.css
+++ b/styles/style.css
@@ -12,13 +12,13 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 1200px;
+  height: 100%;
   margin: auto;
   color: #fff;
   font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
-  block-size: 100%;
-  inline-size: 1200px;
 }
 
 h1,
@@ -57,10 +57,10 @@ ol {
 
 .visually-hidden {
   position: absolute;
+  width: 1px;
+  height: 1px;
   overflow: hidden;
   clip: rect(0 0 0 0);
-  inline-size: 1px;
-  block-size: 1px;
   clip-path: inset(50%);
   white-space: nowrap;
 }
@@ -89,10 +89,10 @@ ol {
 }
 
 .result__video {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center;
-  inline-size: 100%;
-  block-size: 100%;
 }
 
 /* Стили "формы" поиска */
@@ -120,8 +120,7 @@ ol {
   display: flex;
   align-items: center;
   gap: 5px;
-  cursor: pointer;
-  inline-size: fit-content;
+  width: fit-content;
 }
 
 .search-form__label-text {
@@ -132,15 +131,24 @@ ol {
   align-items: center;
   width: 225px;
   height: 27px;
-  border-inline-start: 1px solid transparent;
-  border-inline-end: 1px solid transparent;
-  border-block-start: 1px solid #fff;
-  border-block-end: 1px solid #fff;
+  border: none;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
   color: rgba(255, 255, 255, 0.7);
   font-family: Fira Sans Condensed;
   font-weight: 400;
   font-size: 18px;
   background-color: transparent;
+  appearance: none;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
 }
 
 /* Стили для списка чекбосков*/
@@ -161,9 +169,13 @@ ol {
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
   content: "";
+  width: 15px;
+  height: 15px;
   background: #fff;
-  inline-size: 15px;
-  block-size: 15px;
+}
+
+.search-form__label:hover .search-form__label-text {
+  text-decoration: underline;
 }
 
 /* Общие стили для кнопки*/
@@ -197,8 +209,8 @@ ol {
   display: flex;
   flex-direction: column;
   gap: 26px;
-  inline-size: 100%;
-  block-size: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 /* Заголовок страницы */
@@ -280,5 +292,5 @@ ol {
 /* Стили для кнопки "Показать еще" */
 
 .more-button {
-  inline-size: 100%;
+  width: 100%;
 }
