--- a/styles/style.css
+++ b/styles/style.css
@@ -121,7 +121,6 @@ ol {
   align-items: center;
   gap: 5px;
   width: fit-content;
-  cursor: pointer;
 }
 
 .search-form__label-text {
@@ -204,7 +203,6 @@ ol {
   font-size: 18px;
   text-align: center;
   background-color: transparent;
-  cursor: pointer;
   appearance: none;
 }
 
@@ -281,13 +279,34 @@ ol {
 }
 
 .content__card-link {
+  display: block;
+  margin: 2px;
   color: #fff;
   text-decoration: none;
+}
+
+/* Состояния для карточек */
+
+.content__card-link:hover {
+  text-decoration: underline;
+}
+
+.content__card-link:active {
+  background: #545050;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
 }
 
 .content__video-card {
   display: flex;
   align-items: start;
+  border: 1px solid transparent;
 }
 
 .content__video-card-description-container {
